# tbp.monty

./: .git-blame-ignore-revs  .gitignore  .rsyncignore  .vale.ini  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  UV_PROTOTYPE.md  Visualize.ipynb  environment.yml  environment_arm64.yml  plot_stuff.ipynb  pyproject.toml  run.py  run_parallel.py  test_metadata.py
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  config.yml
.github/workflows/: assignee-approval.yml  cla.yml  cleanup_docs_preview.yml  docs.yml  docs_deploy.yml  docs_preview.yml  future_work_widget_deploy.yml  future_work_widget_validate.yml  monty.yml  monty_api_docs.yml  monty_publish.yml  tools.yml  triage.yml
benchmarks/: README.md  __init__.py  logos_on_objects.csv  make_detailed_follow_up_configs.py  montymeetsworld.csv  run.py  run_comp_experiments.sh  run_comp_inference_only.sh  run_parallel.py  ycb_10objs.csv  ycb_77objs.csv  ycb_unsupervised.csv  ycb_unsupervised_inference.csv
benchmarks/configs/: __init__.py  compositional_experiments.py  defaults.py  infer_compositional_objects.py  learn_compositional_objects.py  load.py  monty_world_experiments.py  monty_world_habitat_experiments.py  my_experiments.py  names.py  pretraining_experiments.py  unsupervised_inference_experiments.py  ycb_experiments.py
benchmarks/results/: logos_on_objects.csv  montymeetsworld.csv  ycb_10objs.csv  ycb_77objs.csv  ycb_unsupervised.csv  ycb_unsupervised_inference.csv
conf/: README.md  experiment.yaml  test.yaml  update_snapshots.py  validate.py
conf/benchmarks/: defaults.yaml
conf/experiment/: README.md  base_10multi_distinctobj_dist_agent.yaml  base_10simobj_surf_agent.yaml  base_77obj_dist_agent.yaml  base_77obj_surf_agent.yaml  base_config_10distinctobj_dist_agent.yaml  base_config_10distinctobj_surf_agent.yaml  bright_world_image_on_scanned_model.yaml  dark_world_image_on_scanned_model.yaml  hand_intrusion_world_image_on_scanned_model.yaml  infer_comp_lvl1_with_comp_models.yaml  infer_comp_lvl1_with_comp_models_and_resampling.yaml  infer_comp_lvl1_with_monolithic_models.yaml  infer_comp_lvl2_with_comp_models.yaml  infer_comp_lvl3_with_comp_models.yaml  infer_comp_lvl4_with_comp_models.yaml  multi_object_world_image_on_scanned_model.yaml  only_surf_agent_training_10obj.yaml  only_surf_agent_training_10simobj.yaml  only_surf_agent_training_allobj.yaml  only_surf_agent_training_numenta_lab_obj.yaml  randomrot_rawnoise_10distinctobj_surf_agent.yaml  randrot_10distinctobj_surf_agent.yaml  randrot_noise_10distinctobj_5lms_dist_agent.yaml  randrot_noise_10distinctobj_dist_agent.yaml  randrot_noise_10distinctobj_dist_on_distm.yaml  randrot_noise_10distinctobj_surf_agent.yaml  randrot_noise_10simobj_dist_agent.yaml  randrot_noise_10simobj_surf_agent.yaml  randrot_noise_77obj_5lms_dist_agent.yaml  randrot_noise_77obj_dist_agent.yaml  randrot_noise_77obj_surf_agent.yaml  randrot_noise_sim_on_scan_monty_world.yaml  supervised_pre_training_5lms.yaml  supervised_pre_training_5lms_all_objects.yaml  supervised_pre_training_base.yaml  supervised_pre_training_curved_objects_after_flat_and_logo.yaml  supervised_pre_training_flat_objects_wo_logos.yaml  supervised_pre_training_logos_after_flat_objects.yaml  supervised_pre_training_objects_with_logos_lvl1_comp_models.yaml  (+12 more)
docs/: hierarchy.md
docs/community/: code-of-conduct.md  governance.md  our-licence-and-patent-pledge-explained.md  project-showcase.md  tbp-based-papers.md
docs/contributing/: comment-on-issues.md  contributing-tutorials.md  contributing.md  documentation.md  guides-for-maintainers.md  large-language-model-use.md  pull-requests.md  request-for-comments-rfc.md  style-guide.csv  style-guide.md  ways-to-contribute-to-code.md  why-contribute.md
docs/future-work/: cmp-hierarchy-improvements.md  environment-improvements.md  framework-improvements.md  learning-module-improvements.md  monty-demos.md  monty-tooling.md  motor-system-improvements.md  oss-communication-improvements.md  project-roadmap.md  sensor-module-improvements.md  voting-improvements.md
docs/how-monty-works/: connecting-lms-into-a-heterarchy.md  environment-agent.md  evidence-based-learning-module.md  experiment.md  faq-monty.md  how-learning-modules-work.md  implementation-overview.md  learning-module-outputs.md  learning-module.md  model.md  monty.md  motor-system.md  observations-transforms-sensor-modules.md  open-questions.md  policy.md  research-features.md  sensor-module.md
docs/how-to-use-monty/: code-base-structure.md  common-issues-and-how-to-fix-them.md  customizing-monty.md  getting-started.md  implementing-actions.md  logging-and-analysis.md  running-benchmarks.md  tutorials.md
docs/overview/: application-criteria-current-capabilities.md  application-criteria.md  architecture-overview.md  benchmark-experiments.md  faq-thousand-brains-project.md  further-reading.md  glossary.md  vision-of-the-thousand-brains-project.md  welcome-to-the-thousand-brains-project-documentation.md
docs/snippets/: contributing-tasks.md  edit-this-page.md  future-work-estimated-scope.md  future-work-improved-metric.md  future-work-output-type.md  future-work-skills.md  future-work-status.md  future-work-tags.md
docs/theory/: compositional-models.md  (+3 more)
recipe/: conda_build_config.yaml  meta.yaml
rfcs/: 0000_comprehensive_template.md  0000_minimal_template.md  0000_template.md  0001_github_2_readme_sync.md  0002_pr_and_issue_review.md  0003_no_three_day_wait.md  0004_action_object.md  0005_easier_rfcs.md  0006_compartmentalize_simulator_code.md  0007_monty_versioning.md  0008_reorganize_repositories.md  0009_hypotheses_resampling.md  0010_conventional_commits.md  0011_code_organization_guide.md  0012_extended_goal_state_functionality.md  0013_resampling_dynamic_adjustment.md  0014_conducting_research_while_building_a_stable_platform.md  0015_future_work.md  0016_project_typing_guidelines.md  0017_guidance_on_using_llms.md  0018_code_guidance_for_researchers_and_community.md  0019_repository_support_levels.md  README.md
tests/: __init__.py
tools/: .coveragerc
(+1366 files in other folders)
